syntax = "proto3";
option java_package = "com.alipay.sofa.registry.common.model.client.pb";
option java_multiple_files = true;
option go_package = "proto";

message AppRevisionRegisterPb{
  string appname = 1;
  string revision = 2;
  map<string, QueryValues> baseParams = 4;
  repeated AppRevisionInterfacePb interfaces = 5;
}


message AppRevisionInterfacePb{
  string dataId = 1;
  string group = 2;
  string instanceId = 3;
  map<string, QueryValues> serviceParams = 4;
}

message QueryValues{
  repeated string values = 1;
}